--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,23 @@
   --main-black: #000;
 }
 
-nav ul{
+#nav-bar ul{
   display: flex;
   flex-direction: row;
   justify-content:flex-end;
   padding: 0 3em;
 }
 
-nav li{
+#nav-bar li{
   list-style: none;
   padding: 1em 3em;
+}
+
+@media (max-width: 800px){
+#nav-bar li {
+  display: block;
+
+  }
 }
 
 #nav-bar{
@@ -33,6 +40,13 @@ nav li{
   left: 0;
   width: 100%;
   border-bottom: 4px solid var(--main-red);
+}
+
+@media (max-width: 800px){
+#nav-bar {
+  display: block;
+  font-size: .8em;
+  }
 }
 
 #nav-bar a{
@@ -81,10 +95,24 @@ h1{
   height: 95vh;
 }
 
+@media (max-width: 800px){
+#work{
+  
+  }
+}
+
 #center{
   display: grid;
   grid-template-areas:"grid grid";
   grid-gap: 1rem;
+
+}
+
+@media (max-width: 800px){
+#center {
+  display: grid;
+  grid-template-areas:"grid";
+    }
 }
 
 #grid {
@@ -93,6 +121,7 @@ h1{
   max-width: 1280px;
   margin: 0 auto;
   text-align: justify;
+
 }
 
 #grid a{
@@ -116,9 +145,16 @@ h1{
 }
 
 #img {
-  height: calc(100% - 1rem);
+  height: 100%;
   width: 100%;
   object-fit: cover;
+}
+
+@media (max-width: 800px){
+#img {
+  weight: 10em;
+  height: 10em;
+  }
 }
 
 #btn{
@@ -131,7 +167,7 @@ h1{
   border-radius: 2px;
   cursor: pointer;
   background-color: var(--main-orange);
-  margin-top: 2em;
+  margin-top: 3em;
 }
 
 #btn a{
@@ -151,12 +187,12 @@ h1{
   align-items: center;
   text-align: center;
   width: 100%;
-  padding: 2em 4em;
+  padding: 2em 2em;
 }
 
 #callme a{
   text-decoration: none;
-  padding: .5em 4em;
+  padding: .5em 2em;
   font-size: 1.8em;
   text-transform: uppercase;
   color:var(--main-black);
@@ -185,6 +221,7 @@ h1{
 #call-img{
   weight:1.5em;
   height: 1.5em;
+
   }
 
 p{
