--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,14 @@
 }
 
 @media (max-width: 800px){
-#nav-bar {
-  display: block;
-  font-size: .8em;
+ #nav-bar{
+  justify-content: center;
+  }
+}
+
+@media (max-width: 800px){
+ #nav-bar li{
+  justify-content:space-between;
   }
 }
 
@@ -57,6 +62,7 @@
   text-transform: uppercase;
   font-weight: bold;
 }
+
 
 #nav-bar a:visited{
 color: var(--main-white);
@@ -97,7 +103,8 @@ h1{
 
 @media (max-width: 800px){
 #work{
-  
+weight:80%;
+height: 50%;
   }
 }
 
@@ -112,7 +119,9 @@ h1{
 #center {
   display: grid;
   grid-template-areas:"grid";
-    }
+  weight:100%;
+  height: 100%;
+  }
 }
 
 #grid {
@@ -121,7 +130,14 @@ h1{
   max-width: 1280px;
   margin: 0 auto;
   text-align: justify;
+}
 
+@media (max-width: 800px){
+#grid {
+  weight:100%;
+  height:100%;
+  padding-bottom: 3em;
+  }
 }
 
 #grid a{
@@ -152,8 +168,10 @@ h1{
 
 @media (max-width: 800px){
 #img {
-  weight: 10em;
-  height: 10em;
+  weight: 350%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
   }
 }
 
@@ -190,6 +208,16 @@ h1{
   padding: 2em 2em;
 }
 
+@media (max-width: 800px){
+#callme {
+  margin-top: -2em;
+  margin-bottom: -2em;
+  width: 30%;
+  height: 20%;
+  display: block;
+  }
+}
+
 #callme a{
   text-decoration: none;
   padding: .5em 2em;
@@ -218,11 +246,33 @@ h1{
   text-transform: uppercase;
 }
 
+@media (max-width: 800px){
+#contact{
+display: block;
+  }
+}
+
+@media (max-width: 800px){
+#cont{
+  display: grid;
+  grid-template-columns: 2em 4em;
+  text-align: center;
+  font-size: 1em;
+  }
+}
+
+#call-img{
+  weight:1.5em;
+  height: 1.5em;
+}
+
+@media (max-width: 800px){
 #call-img{
   weight:1.5em;
   height: 1.5em;
 
   }
+}
 
 p{
   text-align: center;
