--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,8 @@
 
 @media (max-width: 800px){
  #nav-bar{
-  justify-content: center;
+  font-size: 60%;
+  padding: 0 auto;
   }
 }
 
@@ -90,21 +91,25 @@ color: var(--main-white);
 
 h1{
   text-align: center;
-  font-size: 3.5em;
+  font-size: 3em;
   color:var(--main-white);
+  padding: 0 auto;
 }
 
 #work{
   background-color:var(--main-black);
   text-align: center;
   padding: 0 auto;
-  height: 95vh;
+  height: 120vh;
+  position: static;
+
 }
 
 @media (max-width: 800px){
-#work{
-weight:80%;
-height: 50%;
+ #work{
+  display: block;
+  weight: 50%;
+  height: 10%;
   }
 }
 
@@ -112,31 +117,34 @@ height: 50%;
   display: grid;
   grid-template-areas:"grid grid";
   grid-gap: 1rem;
-
+  padding-bottom: -1em;
+  height: 80%;
+position: static;
 }
 
 @media (max-width: 800px){
 #center {
   display: grid;
   grid-template-areas:"grid";
-  weight:100%;
-  height: 100%;
+  weight: 150%;
+  height: 150%;
   }
 }
 
 #grid {
-  width: 30%;
+  display: block;
+  width: 35%;
   height: 80%;
   max-width: 1280px;
   margin: 0 auto;
   text-align: justify;
+  padding-top: 2em;
 }
 
 @media (max-width: 800px){
 #grid {
   weight:100%;
   height:100%;
-  padding-bottom: 3em;
   }
 }
 
@@ -144,36 +152,50 @@ height: 50%;
   text-decoration: none;
 }
 
+
+@media (max-width: 800px){
+#project-title {
+  font-size: 5em;
+  }
+}
+
 #project-title{
+  font-size: 1em;
+  color:var(--main-white);
+  padding-top: .5em;
+  text-transform: none;
+  text-decoration: none;
   background-color:var(--main-green);
-  height: 3em;
   margin: 0 auto;
 }
+
+
 
 #grid #project-title{
   color: var(--main-black);
   text-transform: uppercase;
-  font-size: 1.2em;
-  font-weight: bold;
-  padding-top: .5em;
-  padding-bottom: .5em;
+  font-size: 1.3em;
+  font-weight: 800;
+  padding-top: 1em;
+  padding-bottom: 1em;
   text-align: center;
 }
 
+
 #img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+  height: 10em;
+  width: 16.4em;
+  object-fit: fill;
 }
 
 @media (max-width: 800px){
 #img {
-  weight: 350%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
+  weight:30%;
+  position: static;
+  margin-left: -4em;
   }
 }
+
 
 #btn{
   padding: 0 20px;
@@ -185,7 +207,8 @@ height: 50%;
   border-radius: 2px;
   cursor: pointer;
   background-color: var(--main-orange);
-  margin-top: 3em;
+  margin-top: 1em;
+  padding-bottom:-3em;
 }
 
 #btn a{
@@ -209,12 +232,12 @@ height: 50%;
 }
 
 @media (max-width: 800px){
-#callme {
-  margin-top: -2em;
-  margin-bottom: -2em;
-  width: 30%;
-  height: 20%;
-  display: block;
+#callme{
+  display: flex;
+  flex-direction: column;
+  height: 4em;
+  margin-top: 3em;
+  font-size: .8em;
   }
 }
 
@@ -244,21 +267,7 @@ height: 50%;
   background-color:var(--main-green);
   height: 30vh;
   text-transform: uppercase;
-}
-
-@media (max-width: 800px){
-#contact{
-display: block;
-  }
-}
-
-@media (max-width: 800px){
-#cont{
-  display: grid;
-  grid-template-columns: 2em 4em;
-  text-align: center;
-  font-size: 1em;
-  }
+  position:relative;
 }
 
 #call-img{
@@ -267,11 +276,9 @@ display: block;
 }
 
 @media (max-width: 800px){
-#call-img{
-  weight:1.5em;
-  height: 1.5em;
-
-  }
+ #call-img{
+margin: 0 auto;
+}
 }
 
 p{
@@ -286,8 +293,8 @@ p{
 h2{
   display: block;
   margin: 0 auto;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding-top: -1em;
+  padding-bottom: .5em;
   font-size: 2.7em;
   color:var(--main-white);
   text-decoration: underline;
@@ -303,13 +310,6 @@ h3{
   padding-top: .8em;
 }
 
-#project-title{
-  font-size: 1em;
-  color:var(--main-white);
-  padding-top: .5em;
-  text-transform: none;
-  text-decoration: none;
-}
 
 footer{
  font-weight: 300;
