--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@
   --main-black: #000;
 }
 
+/* nav-bar and header*/
+
 #nav-bar ul{
   display: flex;
   flex-direction: row;
@@ -27,7 +29,6 @@
 @media (max-width: 800px){
 #nav-bar li {
   display: block;
-
   }
 }
 
@@ -64,9 +65,8 @@
   font-weight: bold;
 }
 
-
 #nav-bar a:visited{
-color: var(--main-white);
+  color: var(--main-white);
 }
 
 #nav-bar a:hover{
@@ -96,13 +96,23 @@ h1{
   padding: 0 auto;
 }
 
+p{
+  text-align: center;
+  color:var(--main-black);
+  font-size: 1.3em;
+  margin-top: .6em;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+/*body and center of site*/
+
 #work{
   background-color:var(--main-black);
   text-align: center;
   padding: 0 auto;
-  height: 120vh;
+  height: 125vh;
   position: static;
-
 }
 
 @media (max-width: 800px){
@@ -113,17 +123,27 @@ h1{
   }
 }
 
+h2{
+  display: block;
+  margin: 0 auto;
+  padding-top: -1em;
+  padding-bottom: .5em;
+  font-size: 2.7em;
+  color:var(--main-white);
+  text-decoration: underline;
+}
+
 #center{
   display: grid;
   grid-template-areas:"grid grid";
   grid-gap: 1rem;
-  padding-bottom: -1em;
+  padding-bottom: 1em;
   height: 80%;
-position: static;
+  position: static;
 }
 
 @media (max-width: 800px){
-#center {
+ #center {
   display: grid;
   grid-template-areas:"grid";
   weight: 150%;
@@ -152,13 +172,6 @@ position: static;
   text-decoration: none;
 }
 
-
-@media (max-width: 800px){
-#project-title {
-  font-size: 5em;
-  }
-}
-
 #project-title{
   font-size: 1em;
   color:var(--main-white);
@@ -169,7 +182,14 @@ position: static;
   margin: 0 auto;
 }
 
-
+@media (max-width: 800px){
+#project-title {
+  weight:30%;
+  position: static;
+  margin-left: -3.1em;
+  margin-right: -3.2em;
+  }
+}
 
 #grid #project-title{
   color: var(--main-black);
@@ -180,7 +200,6 @@ position: static;
   padding-bottom: 1em;
   text-align: center;
 }
-
 
 #img {
   height: 10em;
@@ -196,7 +215,6 @@ position: static;
   }
 }
 
-
 #btn{
   padding: 0 20px;
   height: 40px;
@@ -211,6 +229,13 @@ position: static;
   padding-bottom:-3em;
 }
 
+@media (max-width: 800px){
+#btn {
+  display:block;
+  margin: 0 auto;
+  }
+}
+
 #btn a{
   text-decoration: none;
   cursor: pointer;
@@ -219,6 +244,21 @@ position: static;
 #btn a:hover{
  background-color: var(--main-white);
  height: 40px;
+}
+
+/*footer and contact */
+
+#contact {
+  background-color:var(--main-green);
+  height: 30vh;
+  text-transform: uppercase;
+  position:relative;
+}
+
+@media (max-width: 800px){
+#contact {
+  position:static;
+  }
 }
 
 #callme{
@@ -238,17 +278,27 @@ position: static;
   height: 4em;
   margin-top: 3em;
   font-size: .8em;
+  padding-right: -1em;
   }
 }
 
 #callme a{
   text-decoration: none;
-  padding: .5em 2em;
+  padding-top:.5em;
+  padding-left: -1em;
+  padding-right: 1em;
+  padding-bottom: 2em;
   font-size: 1.8em;
   text-transform: uppercase;
   color:var(--main-black);
   font-size: 1.8em;
   font-weight: bold;
+}
+
+@media (max-width: 800px){
+ #callme a{
+  margin: 0 auto;
+  }
 }
 
 #callme a:link{
@@ -263,53 +313,23 @@ position: static;
  color: var(--main-purpure);
 }
 
-#contact {
-  background-color:var(--main-green);
-  height: 30vh;
-  text-transform: uppercase;
-  position:relative;
-}
-
 #call-img{
-  weight:1.5em;
+  weight: 1.5em;
   height: 1.5em;
+  margin: 0 auto;
+  padding-right: -6em;
 }
 
 @media (max-width: 800px){
  #call-img{
-margin: 0 auto;
+   margin: 0 auto;
+ }
 }
+@media (max-width: 800px){
+ #cont{
+   margin: 0 auto;
+ }
 }
-
-p{
-  text-align: center;
-  color:var(--main-black);
-  font-size: 1.3em;
-  margin-top: .6em;
-  font-weight: 800;
-  text-transform: uppercase;
-}
-
-h2{
-  display: block;
-  margin: 0 auto;
-  padding-top: -1em;
-  padding-bottom: .5em;
-  font-size: 2.7em;
-  color:var(--main-white);
-  text-decoration: underline;
-}
-
-h3{
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  color:var(--main-white);
-  font-size: 2em;
-  font-weight: 800;
-  padding-top: .8em;
-}
-
 
 footer{
  font-weight: 300;
@@ -321,4 +341,14 @@ footer{
 footer p{
  text-align: right;
  color:var(--main-white);
+}
+
+h3{
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  color:var(--main-white);
+  font-size: 2em;
+  font-weight: 800;
+  padding-top: .8em;
 }
